--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ option(GLFW_BUILD_EXAMPLES OFF)
 option(GLFW_BUILD_TESTS OFF)
 add_subdirectory(3rdParty/glfw)
 
+# CONFIGURE ASSIMP
+add_subdirectory(assimp-master) 
+include_directories(assimp-master/include/)
 
 
 include_directories(3rdParty/glad/include/
@@ -31,10 +34,23 @@ include_directories(3rdParty/glad/include/
                     3rdParty/glm/
                     3rdParty/stb/)
 
-set(SOURCES_PROJECT "project.cpp" "camera.h" "shader.h" "object.h")
+        
+
+# set(SOURCES_PROJECT "main.cpp")
+set(SOURCES_PROJECT "main.cpp")
 
 add_compile_definitions(PATH_TO_OBJECTS="${CMAKE_CURRENT_SOURCE_DIR}/objects")
 add_compile_definitions(PATH_TO_TEXTURE="${CMAKE_CURRENT_SOURCE_DIR}/textures")
 
+add_library(
+    stb_image STATIC
+    stb_image.cpp
+    3rdParty/stb/stb_image.h
+)
+set(STB_INCLUDE "3rdParty/stb")
+SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(stb_image PUBLIC ${STB_INCLUDE})
+
+
 add_executable(${PROJECT_NAME} ${SOURCES_PROJECT})
-target_link_libraries(${PROJECT_NAME} PUBLIC OpenGL::GL glfw glad)
+target_link_libraries(${PROJECT_NAME} PUBLIC OpenGL::GL glfw glad stb_image assimp)
